--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-check-box": "^2.1.7",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1"
   },
