--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-native": "0.72.1",
     "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.22.1"
+    "react-native-screens": "^3.22.1",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
