--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.16",
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.2.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
-    "react-router-dom": "^6.14.2"
+    "react-native-tab-view": "^3.5.2",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.14.2",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
