--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.16",
@@ -16,6 +17,8 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
+    "deprecated-react-native-prop-types": "^4.2.1",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-check-box": "^2.1.7",
